syntax = "proto3";

package eci.v1.svr.stringprocess;

service StringProcess {
    rpc ToUpper(OriginalStrReq) returns (UpperStrRes) {}
}

message OriginalStrReq {
    string originalString = 1;
}

message UpperStrRes {
    string upperString = 1;
}